--- a/candidate/templates/cand-home.html
+++ b/candidate/templates/cand-home.html
@@ -15,28 +15,28 @@
 <div class="container">
 
     <div class="row mt-5">
-    <div class="col-1"></div>
-    <div class="col-10">
-        <form action="" method="get">
-           <div class="row">
-               <div class="col-2">Posted by :{{filter.form.posted_by}}</div>
-               <div class="col-2">Job Title :{{filter.form.job_title}}</div>
-               <div class="col-2">Job Role :{{filter.form.role}}</div>
-               <div class="col-2">Location :{{filter.form.location}}</div>
-               <div class="col-2">Salary :{{filter.form.salary}}</div>
-               <div class="col-2">Qualification :{{filter.form.qualification}}</div>
-               <div class="col mt-3"align="center"> <input type="submit"></div>
-           </div>
+         <div class="col-1"></div>
+        <div class="col-10">
+            <form action="" method="get">
+                <div class="row">
+                    <div class="col-2">Job Title :{{filter.form.job_title}}</div>
+                    <div class="col-2">Job Role :{{filter.form.role}}</div>
+                    <div class="col-2">Location :{{filter.form.location}}</div>
+                    <div class="col-2">Salary :{{filter.form.salary}}</div>
+                    <div class="col-2">Qualification :{{filter.form.qualification}}</div>
+                    <div class="col mt-3" align="center"><input type="submit"></div>
+                </div>
 
-        </form>
+            </form>
+        </div>
+        <div class="col-1"></div>
     </div>
-    <div class="col-1"></div>
-</div>
-
+qs
     <div class="row mt-5">
         {%for job in filter.qs%}
-        <div class="col-4">
-            <div class="card text-bg-info mb-3" style="max-width: 18rem;">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <div class="card text-bg-info mb-3" style="max-width: 50rem;">
                 <div class="card-header">{{job.job_title}}</div>
                 <div class="card-body">
                     <h5 class="card-title">{{job.role}}</h5>
@@ -44,9 +44,11 @@
 
 
                 </div>
-                 <div class="card-footer bg-transparent border-success"><a href="{%url 'cand-detailjob' job.id%} " class="btn btn-success">View</a></div>
+                <div class="card-footer bg-transparent border-success"><a href="{%url 'cand-detailjob' job.id%} "
+                                                                          class="btn btn-success">View</a></div>
             </div>
         </div>
+        <div class="col-3"></div>
         {%endfor%}
     </div>
 </div>
@@ -54,3 +56,4 @@
 </body>
 {%endblock%}
 </html>
+
