--- a/candidate/templates/cand-viewprofile.html
+++ b/candidate/templates/cand-viewprofile.html
@@ -10,6 +10,8 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
+
 </head>
 <body>
 <div class="conainer">
@@ -17,6 +19,7 @@
         <div class="col-4"></div>
         <div class="col-4">
             <ul class="list-group">
+
                 <img src="{{request.user.candidates.profile_pic.url}}" width="100" height="500" class="card-img-top" alt="...">
                 <li class="list-group-item">Name : {{request.user.first_name}}</li>
                 <li class="list-group-item">Qualification : {{request.user.candidates.qualification}}</li>
