--- a/employer/templates/emp-jobdetail.html
+++ b/employer/templates/emp-jobdetail.html
@@ -1,35 +1,92 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<link rel="stylesheet" href="{%static 'css/emp-postjob.css'%}">
+
 <body>
-<div class="contianer">
+<div class="container">
     <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-           
-              <div class="card-body">
-                    <h5 class="card-title">Job title : {{job.job_title}}</h5>
-                    <p class="card-text">Job Description : {{job.job_description}}</p>
+        <div class="col-3"></div>
+        <div class="col-6">
 
-                  <p class="card-text">Salary : {{job.salary}}</p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                </ul>
-                <div class="card-body">
-                    <a href="{%url 'emp-jobedit' job.id%}" class="card-link">Edit</a>
+            <div class="card mt-50 mb-50 ">
+                <div class="card-title mx-auto">
 
                 </div>
+                <div class="nav">
+                    <ul class="mx-auto">
 
+                    </ul>
+                </div>
+
+
+                    <span id="card-header">Job Title:</span>
+                    <div class="row row-1">
+                        <div class="col">{{job.job_title}}</div>
+
+                    </div>
+
+                    <span id="card-header">Job Description:</span>
+                    <div class="row row-1">
+                        <div class="col">{{job.job_description}}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6"><span id="card-header">Experiance:</span>
+
+                                <div class="col">{{job.experiance}}</div>
+
+                        </div>
+                        <div class="col-6"><span id="card-header">Location:</span>
+                            <div class="row row-1">
+                                <div class="col">{{job.location}}</div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col-6"><span id="card-header">Last Date:</span>
+                            <div class="row row-1">
+                                <div class="col">{{job.last_date}}</div>
+                            </div>
+                        </div>
+                        <div class="col-6"><span id="card-header">Salary:</span>
+                            <div class="row row-1">
+                                <div class="col">{{job.salary}}</div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                             <div class="col">
+                            <span id="card-header">Qualification:</span>
+                            <div class="row row-1">
+                                <div class="col">{{job.qualification|linebreaksbr}}</div>
+                            </div>
+                        </div>
+                        </div>
+
+
+                    </div>
+                   <div class="row">
+                       <a href="{%url 'emp-jobedit' job.id%}" class="btn btn-primary">Edit</a>
+                   </div>
+
+
+            </div>
 
         </div>
-        <div class="col-4"></div>
+        <div class="col-3"></div>
     </div>
 </div>
+
 </body>
 </html>
