--- a/employer/templates/emp-joblist.html
+++ b/employer/templates/emp-joblist.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{%static 'css/emp-joblist.css'%}">
+
 
 </head>
+
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-            {% if messages %}
-        {%for message in messages%}
-        {%if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-        <div class=" bg-info ">
-            {{message}}
-        </div>
-        {% endif %}%}
-        {%endfor%}
-        {% endif %}
-        </div>
-        <div class="col-4"></div>
-    </div>
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-            {%for job in jobs%}
-            <div class="border border-dark mb-2 mt2">
-                Job Title:{{job.job_title}}
-                Experiance:{{job.experiance}}
-                Created Date:{{job.created_date}}
-                <a href="{%url 'emp-jobdetail' job.id%}">Detail</a>
-                <a href="{%url 'emp-viewappl' job.id%}">View Applications</a>
-                <a href="{%url 'emp-applicationstatus' job.id%}">Status</a>
+<div class="row">
+    <h2 align="center">All Jobs</h2>
+    <div class="col-2"></div>
 
+    <div class="col-8">
+        {%for job in jobs%}
+        <div class="col">
+            <div class="bg-white p-3 rounded mt-4">
+                <div class="row">
+
+                    <div class="col-md-8 border-right">
+                        <div class="listing-title">
+                            <h5>Job Title:{{job.job_title}}</h5>
+                        </div>
+
+                        <div class="description">
+                            <tt>Location:{{job.location}}</tt>
+                            <br>
+                            <tt>Created Date:{{job.created_date}}</tt>
+
+
+                        </div>
+
+                    </div>
+                    <div class="d-flex col-md-4">
+                        <div class="d-flex flex-column justify-content-start user-profile w-100">
+                            <a href="{%url 'emp-jobdetail' job.id%}" class="btn btn-outline-primary font-weight-bold mr-2">Detail</a>
+                            <a href="{%url 'emp-viewappl' job.id%}" class="btn btn-outline-danger font-weight-bold mr-2">View Applications</a>
+                            <a href="{%url 'emp-applicationstatus' job.id%}" class="btn btn-outline-warning font-weight-bold mr-2">Status</a>
+
+
+
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            {%endfor%}
         </div>
-        <div class="col-4"></div>
+        {%endfor%}
     </div>
+    <div class="col-2"></div>
+</div>
 </div>
 </body>
+
 </html>
