--- a/employer/templates/emp-jobdetail.html
+++ b/employer/templates/emp-jobdetail.html
@@ -34,7 +34,7 @@
 
                     <span id="card-header">Job Description:</span>
                     <div class="row row-1">
-                        <div class="col">{{job.job_description}}</div>
+                        <div class="col">{{job.job_description|safe }}</div>
                     </div>
                     <div class="row">
                         <div class="col-6"><span id="card-header">Experiance:</span>
