--- a/candidate/templates/cand-detailjob.html
+++ b/candidate/templates/cand-detailjob.html
@@ -6,37 +6,151 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+        <!-- Font Awesome JS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
+  <style>
+ body {
+  background-color: #f6f9fb!important;
+}
+.text-small {
+  font-size: 0.9rem;
+}
+.rounded {
+  border-radius: 1rem;
+}
+  </style>
+
 </head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
-            <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-                <div class="card-header bg-transparent border-success">{{job.job_title}}</div>
-                <div class="card-body text-success">
-                    <h5 class="card-title">{{job.role}}</h5>
-                    <p class="card-text">{{job.job_description}}</p>
-                    <p class="card-text">{{job.experiance}}</p>
-                    <p class="card-text">{{job.location}}</p>
-                    <p class="card-text">{{job.salary}}</p>
-                    <p class="card-text">{{job.last_date}}</p>
-                    <p class="card-text">{{job.qualification}}</p>
+    <body>
+
+    <!-- FOR DEMO PURPOSE -->
+<div class="container py-5">
+
+  <div class="row">
+    <div class="col-lg-7 mx-auto">
+      <div class="bg-white rounded-lg shadow-sm p-5">
+        <!-- Credit card form tabs -->
+        <ul role="tablist" class="nav bg-light nav-pills rounded-pill nav-fill mb-3">
+          <li class="nav-item">
+            <a data-toggle="pill" href="#nav-tab-card" class="nav-link active rounded-pill">
+                                Company
+                                <b>{{job.posted_by.employers.company_name}}</b>
+
+                            </a>
+          </li>
+          <li class="nav-item">
+            <a data-toggle="pill" href="#nav-tab-card" class="nav-link active rounded-pill">
+                                 Location
+                                <b>{{job.location}}</b>
+                            </a>
+          </li>
+
+        </ul>
+        <!-- End -->
 
 
-                </div>
-                {%if status%}
-                  <div class="card-footer bg-transparent border-success"> <a href="#"class="btn btn-outline-success">Applaid</a>
+        <!-- Credit card form content -->
+        <div class="tab-content">
+
+          <!-- credit card info-->
+          <div id="nav-tab-card" class="tab-pane fade show active">
+            <h3 class="alert alert-success">{{job.job_title}}</h3>
+            <form role="form">
+              <div class="form-group">
+
+                <b>Experiance :</b>
+
+                  <i>{{job.experiance}}yers</i>
+              </div>
+              <div class="form-group">
+                <b>Description :</b>
+                  <hr>
+                  {{job.job_description | safe}}
+              </div>
+              <div class="row">
+                <div class="col-sm-8">
+                  <div class="form-group">
+                    <b>Salary :</b>
+
+                      {{job.salary}}
                   </div>
-                {%else%}
+                </div>
 
-                <div class="card-footer bg-transparent border-success"><a href="{%url 'apply_now' job.id%}"class="btn btn-outline-danger" >Apply
-                    Now</a></div>
-            </div>
-            {%endif%}
+                  <div class="row">
+                      <div class="col-sm-8">
+                          <div class="form-group">
+                              <b>Last Date :</b>
+                              {{job.last_date}}
+                          </div>
+                      </div>
+                  </div>
+                   <div class="row">
+                      <div class="col-sm-8">
+                          <div class="form-group">
+                              <b>Min.Qualification :</b>
+                              {{job.qualification}}
+                          </div>
+                      </div>
+                  </div>
+
+
+
+              </div>
+               {%if status%}
+                <a href=""class="subscribe btn btn-primary btn-block rounded-pill shadow-sm">Applaid</a>
+                {%else%}
+                <a href="{%url 'apply_now' job.id%}"class="subscribe btn btn-primary btn-block rounded-pill shadow-sm">Applay Now</a>
+                {%endif%}
+            </form>
+          </div>
+          <!-- End -->
+
+          <!-- Paypal info -->
+          <div id="nav-tab-paypal" class="tab-pane fade">
+            <p>Paypal is easiest way to pay online</p>
+            <p>
+              <button type="button" class="btn btn-primary rounded-pill"><i class="fa fa-paypal mr-2"></i> Log into my Paypal</button>
+            </p>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <!-- End -->
+
+          <!-- bank transfer info -->
+          <div id="nav-tab-bank" class="tab-pane fade">
+            <h6>Bank account details</h6>
+            <dl>
+              <dt>Bank</dt>
+              <dd> THE WORLD BANK</dd>
+            </dl>
+            <dl>
+              <dt>Account number</dt>
+              <dd>7775877975</dd>
+            </dl>
+            <dl>
+              <dt>IBAN</dt>
+              <dd>CZ7775877975656</dd>
+            </dl>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <!-- End -->
         </div>
-        <div class="col-3"></div>
+        <!-- End -->
+
+      </div>
     </div>
+  </div>
 </div>
-</body>
+
+    </body>
+
 </html>
