--- a/candidate/templates/cand-profile.html
+++ b/candidate/templates/cand-profile.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,24 +7,57 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="{%static 'css/cand-profile.css'%}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
+<form action="" method="post" enctype="multipart/form-data">
+    {%csrf_token%}
+    <div class="container rounded bg-white mt-5">
+        <div class="row">
+            <div class="col-md-4 border-right">
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
+                                                                                             src="https://te.legra.ph/file/8ad0fac2d274733c976ca.png"
+                                                                                             width="90"><span
+                        class="font-weight-bold">Upload Image</span><span
+                        class="text-black-50">{{form.profile_pic}}</span><span></span></div>
+            </div>
+            <div class="col-md-8">
+                <div class="p-3 py-5">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <div class="d-flex flex-row align-items-center back"><i
+                                class="fa fa-long-arrow-left mr-1 mb-1"></i>
+                            <h6>Back to home</h6>
+                        </div>
+                        <h6 class="text-right">Edit Profile</h6>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col-md-6"><input type="text" class="form-control" value="{{request.user.first_name}}" placeholder="Doe"></div>
+                        <div class="col-md-6"><input type="text" class="form-control" value="{{request.user.email}}" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-6">{{form.age}}</div>
+                        <div class="col-md-6">{{form.qualification}}</div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-12">{{form.skills}}</div>
 
-            <form action="" method="post" enctype="multipart/form-data">
-                {%csrf_token%}
+                    </div>
+                    <div class="row mt-3">
+                          Upload your CV/Resume
+                        <div class="col-md-12">{{form.cv}}</div>
 
-                {{form.as_p}}
-                <input type="submit">
-            </form>
-
+                    </div>
+                    <div class="mt-5 text-right">
+                        <button class="btn btn-primary profile-button" type="submit">Save Profile</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-4"></div>
     </div>
-</div>
-
+</form>
 </body>
 </html>
