--- a/candidate/templates/cand-viewprofile.html
+++ b/candidate/templates/cand-viewprofile.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,27 +11,89 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
-
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.css">
+    <link rel="stylesheet" href="{%static 'css/cand-viewprofile.css'%}">
 </head>
 <body>
-<div class="conainer">
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-            <ul class="list-group">
 
-                <img src="{{request.user.candidates.profile_pic.url}}" width="100" height="500" class="card-img-top" alt="...">
-                <li class="list-group-item">Name : {{request.user.first_name}}</li>
-                <li class="list-group-item">Qualification : {{request.user.candidates.qualification}}</li>
-                <li class="list-group-item">Age : {{request.user.candidates.age}}</li>
-                <li class="list-group-item">Skills : {{request.user.candidates.skills}}</li>
-
-            </ul>
-            <a href="{%url 'cand-editprofile' request.user.id%}">Edit</a>
+<div class="page-content page-container" id="page-content">
+    <div class="padding">
+        <div class="row container d-flex justify-content-center">
+            <div class="col-xl-6 col-md-12">
+                <div class="card user-card-full">
+                    <div class="row m-l-0 m-r-0">
+                        <div class="col-sm-4 bg-c-lite-green user-profile">
+                            <div class="card-block text-center text-white">
+                                <div class="m-b-25">
+                                    <img src="{{request.user.candidates.profile_pic.url}}" class="rounded-circle border border-danger border-3"
+                                         alt="User-Profile-Image">
+                                </div>
+                                <h6 class="f-w-600">{{request.user}}</h6>
+                                <p>User Name</p>
+                                <a href="{%url 'cand-editprofile' request.user.id%}" class="btn btn-warning"><i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16">
+                                    Edit
+                                </i></a>
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="card-block">
+                                <h1>profile</h1>
+                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">{{request.user}} Profile </h6>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Name : </p>
+                                        <h6 class="text-muted f-w-400">{{request.user.first_name}}</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Email :</p>
+                                        <h6 class="text-muted f-w-400">{{request.user.email}}</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Phone Number: </p>
+                                        <h6 class="text-muted f-w-400">{{request.user.phone}}</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Age: </p>
+                                        <h6 class="text-muted f-w-400">{{request.user.candidates.age}}</h6>
+                                    </div>
+                                </div>
+                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600"></h6>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Qualification</p>
+                                        <h6 class="text-muted f-w-400">{{request.user.candidates.qualification}}</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Skills</p>
+                                        <h6 class="text-muted f-w-400">{{request.user.candidates.skills}}</h6>
+                                    </div>
+                                </div>
+                                <ul class="social-link list-unstyled m-t-40 m-b-10">
+                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
+                                           data-original-title="facebook" data-abc="true"><i
+                                            class="mdi mdi-facebook feather icon-facebook facebook"
+                                            aria-hidden="true"></i></a></li>
+                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
+                                           data-original-title="twitter" data-abc="true"><i
+                                            class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a>
+                                    </li>
+                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
+                                           data-original-title="instagram" data-abc="true"><i
+                                            class="mdi mdi-instagram feather icon-instagram instagram"
+                                            aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-4"></div>
     </div>
 </div>
+
 </body>
 </html>
