--- a/employer/templates/emp-home.html
+++ b/employer/templates/emp-home.html
@@ -1,34 +1,189 @@
 <!DOCTYPE html>
+
+{%extends 'emp-base.html'%}
+{%load static%}
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="{%static 'css/emp-base.css'%}"/>
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <title> DASHBOARD</title>
 </head>
-<body>
-<h1>Welcome Employer{{request.user}}</h1>
 
-{%if request.user.employer%}
-<a href="{%url 'emp-detail'%}">View Profile</a>
-{%else%}
-<a href="{%url 'emp-profile' %}">AddProfile</a>
-{%endif%}
-<a href="{%url 'emp-addjob' %}">Add Job</a>
-<a href="{%url 'emp-listjob' %}">Jobs</a>
+<body id="body">
 
-<div class="row">
-    <div class="col-4"></div>
-    <div class="col-4">
-        {% if messages%}
-        {%for message in messages%}
-        {%if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-        <div class=" bg-info ">
-            {{message}}
+{%block body_block%}
+
+<main>
+    <div class="main__container">
+        <!-- MAIN TITLE STARTS HERE -->
+
+        <div class="main__title">
+            <img src="https://te.legra.ph/file/9ef2f77037d796a88fe60.png" alt=""/>
+            <div class="main__greeting">
+                <h1>Hello {{request.user}} </h1>
+                <p>Welcome to your admin dashboard</p>
+            </div>
         </div>
-        {%endif%}
-        {%endfor%}
-        {%endif%}
+
+        <!-- MAIN TITLE ENDS HERE -->
+
+         <!-- MAIN CARDS STARTS HERE -->
+          <div class="main__cards">
+            <div class="card radius-10 border-start border-0 border-5 border-info">
+              <i
+                class="fa fa-user-o fa-2x text-lightblue"
+                aria-hidden="true"
+              ></i>
+              <div class="card_inner">
+                <p class="text-primary-p">Created Jobs</p>
+                <span class="font-bold text-title">{{jobs}}</span>
+              </div>
+            </div>
+
+            <div class="card radius-10 border-start border-0 border-5 border-danger">
+              <i class="fa fa-calendar fa-2x text-red" aria-hidden="true"></i>
+              <div class="card_inner">
+                <p class="text-primary-p">All applicants</p>
+                <span class="font-bold text-title">{{allappli}}</span>
+              </div>
+            </div>
+
+            <div class="card radius-10 border-start border-0 border-5 border-success">
+              <i
+                class="fa fa-video-camera fa-2x text-yellow"
+                aria-hidden="true"
+              ></i>
+              <div class="card_inner">
+                <p class="text-primary-p">Pending Applications</p>
+                <span class="font-bold text-title">{{pend}}</span>
+              </div>
+            </div>
+
+            <div class="card radius-10 border-start border-0 border-5 border-warning">
+              <i
+                class="fa fa-thumbs-up fa-2x text-green"
+                aria-hidden="true"
+              ></i>
+              <div class="card_inner">
+                <p class="text-primary-p">Accepted Applications</p>
+                <span class="font-bold text-title">{{accappli}}</span>
+              </div>
+            </div>
+          </div>
+          <!-- MAIN CARDS ENDS HERE -->
+
+        <!-- CHARTS STARTS HERE -->
+<!--        <div class="charts">-->
+<!--            <div class="charts__left">-->
+<!--                <div class="charts__left__title">-->
+<!--                    <div>-->
+<!--                        <h1>Resent Posts</h1>-->
+<!--                        <p>Cupertino, California, USA</p>-->
+<!--                    </div>-->
+<!--                    <i class="fa fa-usd" aria-hidden="true"></i>-->
+<!--                </div>-->
+<!--                <div class="row d-flex justify-content-center">-->
+<!--                    <div class="col-md-12 col-lg-12 col-xl-12">-->
+
+
+<!--                        <div class="card mb-3">-->
+<!--                            <div class="card-body">-->
+<!--                                <div class="d-flex flex-start">-->
+<!--                                    <img class="rounded-circle shadow-1-strong me-3"-->
+<!--                                         src="{{request.user.employers.logo.url}}"-->
+<!--                                         alt="avatar" width="40" height="40"/>-->
+<!--                                    <div class="w-100">-->
+<!--                                        <div class="d-flex justify-content-between align-items-center mb-3">-->
+<!--                                            <h6 class="text-primary fw-bold mb-0">-->
+
+<!--                                                <span class="text-dark ms-2">Hmm, This poster looks cool</span>-->
+<!--                                            </h6>-->
+<!--                                            <p class="mb-0">2 days ago</p>-->
+<!--                                        </div>-->
+<!--                                        <div class="d-flex justify-content-between align-items-center">-->
+<!--                                            <p class="small mb-0" style="color: #aaa;">-->
+<!--                                                <a href="#!" class="link-grey">Remove</a> •-->
+<!--                                                <a href="#!" class="link-grey">Reply</a> •-->
+<!--                                                <a href="#!" class="link-grey">Translate</a>-->
+<!--                                            </p>-->
+<!--                                            <div class="d-flex flex-row">-->
+<!--                                                <i class="fas fa-star text-warning me-2"></i>-->
+<!--                                                <i class="far fa-check-circle" style="color: #aaa;"></i>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+
+<!--                    </div>-->
+<!--                </div>-->
+
+
+<!--            </div>-->
+
+<!--            <div class="charts__right">-->
+<!--                <div class="charts__right__title">-->
+<!--                    <div>-->
+<!--                        <h1>Pending Approvals</h1>-->
+<!--                        <p>Cupertino, California, USA</p>-->
+<!--                    </div>-->
+<!--                    <i class="fa fa-usd" aria-hidden="true"></i>-->
+<!--                </div>-->
+
+<!--                <div class="charts__right__cards">-->
+
+<!--                    <div class="card1">-->
+
+<!--                        <div class="row">-->
+<!--                            <div class="avatar col-md-4  ">-->
+<!--                                <a href="#">-->
+<!--                                    <img class="img-circle" src="https://bootdey.com/img/Content/user_3.jpg"-->
+<!--                                         alt="Taylor Otwell">-->
+<!--                                </a>-->
+<!--                            </div>-->
+
+<!--                            <div class="testimonial-main col-md-7">-->
+<!--                                <h4 class="media-heading"><a href="#m">Owenl Ollyt</a></h4>-->
+<!--                                <p class="testimony-body">bootstrap rules!</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+<!--                    </div>-->
+
+
+<!--                    <div class="card2">-->
+
+<!--                    </div>-->
+
+<!--                    <div class="card3">-->
+
+<!--                    </div>-->
+
+<!--                    <div class="card4">-->
+
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+        <!-- CHARTS ENDS HERE -->
     </div>
-    <div class="col-4"></div>
-</div>
+
+</main>
+
+{%endblock%}
+
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script src="{%static 'js/script.js'%}"></script>
 </body>
+
 </html>
