--- a/employer/templates/emp-postjob.html
+++ b/employer/templates/emp-postjob.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
 {%load static%}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -10,79 +12,92 @@
 <link rel="stylesheet" href="{%static 'css/emp-postjob.css'%}">
 
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
 
-            <div class="card mt-50 mb-50 ">
-                <div class="card-title mx-auto">
-                    Add new Job
+{%block body_block%}
+ <link rel="stylesheet" href="{%static 'css/emp-postjob.css'%}">
+
+
+    <div class="container-fluid mt-5">
+        <div class="row mt-5 mb-4">
+            <div class="col-3"></div>
+            <div class="col-6">
+
+                <div class="card mt-50 mb-50 ">
+                    <div class="card-title mx-auto">
+                        Add new Job
+                    </div>
+                    <div class="nav">
+                        <ul class="mx-auto">
+
+                        </ul>
+                    </div>
+                    <form action="" method="post">
+                        {%csrf_token%}
+                        <span id="card-header">Job Title:</span>
+                        <div class="row row-1">
+                            <div class="col">{{form.job_title}}</div>
+
+                        </div>
+
+                        <span id="card-header">Job Description:</span>
+                        <div class="row row-1">
+                            <script src="/static/ckeditor/ckeditor-init.js"
+                                    data-ckeditor-basepath="/static/ckeditor/ckeditor/"
+                                    id="ckeditor-init-script"></script>
+                            <script src="/static/ckeditor/ckeditor/ckeditor.js"></script>
+                            <div class="col">{{form.job_description}}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6"><span id="card-header">Experiance:</span>
+                                <div class="row row-1">
+                                    <div class="col">{{form.experiance}}</div>
+                                </div>
+                            </div>
+                            <div class="col-6"><span id="card-header">Location:</span>
+                                <div class="row row-1">
+                                    <div class="col">{{form.location}}</div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row">
+                            <div class="col-6"><span id="card-header">Last Date:</span>
+                                <div class="row row-1">
+                                    <div class="col">{{form.last_date}}</div>
+                                </div>
+                            </div>
+                            <div class="col-6"><span id="card-header">Salary:</span>
+                                <div class="row row-1">
+                                    <div class="col">{{form.salary}}</div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row">
+                            <div class="col-2"></div>
+                            <div class="col-8">
+                                <span id="card-header">Qualification:</span>
+                                <div class="row row-1">
+                                    <div class="col">{{form.qualification}}</div>
+                                </div>
+                            </div>
+                            <div class="col-2"></div>
+                        </div>
+                        <input type="submit" class="btn btn-primary font-weight-bold mr-2" value="Create Job">
+
+                    </form>
                 </div>
-                <div class="nav">
-                    <ul class="mx-auto">
 
-                    </ul>
-                </div>
-                <form action="" method="post">
-                    {%csrf_token%}
-                    <span id="card-header">Job Title:</span>
-                    <div class="row row-1">
-                        <div class="col">{{form.job_title}}</div>
-
-                    </div>
-
-                    <span id="card-header">Job Description:</span>
-                    <div class="row row-1">
-                        <div class="col">{{form.job_description}}</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6"><span id="card-header">Experiance:</span>
-                            <div class="row row-1">
-                                <div class="col">{{form.experiance}}</div>
-                            </div>
-                        </div>
-                        <div class="col-6"><span id="card-header">Location:</span>
-                            <div class="row row-1">
-                                <div class="col">{{form.location}}</div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-6"><span id="card-header">Last Date:</span>
-                            <div class="row row-1">
-                                <div class="col">{{form.last_date}}</div>
-                            </div>
-                        </div>
-                        <div class="col-6"><span id="card-header">Salary:</span>
-                            <div class="row row-1">
-                                <div class="col">{{form.salary}}</div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-2"></div>
-                        <div class="col-8">
-                            <span id="card-header">Qualification:</span>
-                            <div class="row row-1">
-                                <div class="col">{{form.qualification}}</div>
-                            </div>
-                        </div>
-                        <div class="col-2"></div>
-                    </div>
-                    <input type="submit" class="btn btn-primary font-weight-bold mr-2"value="Create Job" >
-
-                </form>
             </div>
-
+            <div class="col-3"></div>
         </div>
-        <div class="col-3"></div>
-    </div>
-</div>
 
+
+    </div>
+
+{%endblock%}
 </body>
+
 </html>
