--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -28,7 +28,7 @@
             <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
             <h3>Welcome</h3>
             <p>You are 30 seconds away from earning your own money!</p>
-            <input type="submit" name="" value="Login"/><br/>
+            <a href="{%url 'signin'%}">Login</a><br/>
         </div>
 
         <div class="col-md-9 register-right">
